--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -13,12 +13,8 @@ publish = false
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { features = [
-	"derive",
-], workspace = true }
-scale-info = { features = [
-	"derive",
-], workspace = true }
+codec = { features = ["derive"], workspace = true }
+scale-info = { features = ["derive"], workspace = true }
 frame-benchmarking = { optional = true, workspace = true }
 frame-support.workspace = true
 frame-system.workspace = true
@@ -35,6 +31,7 @@ std = [
 	"frame-benchmarking?/std",
 	"frame-support/std",
 	"frame-system/std",
+	# "pallet-timestamp/std"
 	"scale-info/std",
 ]
 runtime-benchmarks = [
@@ -45,4 +42,5 @@ runtime-benchmarks = [
 try-runtime = [
 	"frame-support/try-runtime",
 	"frame-system/try-runtime",
+	# "pallet-timestamp/try-runtime",
 ]
